Bug 877965 - Ignore empty statements in var declarations in asm.js mode. r=luke